Implemented all notebook

--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -21,13 +21,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "za-DgcYB_IQx",
-        "outputId": "575160cb-cf01-4cff-8d37-8a8908a70c86"
+        "outputId": "e9cf11ed-c999-4b63-b0c7-72a753d68f00"
       },
       "outputs": [
         {
@@ -35,12 +35,13 @@
           "name": "stdout",
           "text": [
             "Cloning into '2025_assignment_1'...\n",
-            "remote: Enumerating objects: 62, done.\u001b[K\n",
-            "remote: Counting objects: 100% (62/62), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (45/45), done.\u001b[K\n",
-            "remote: Total 62 (delta 18), reused 44 (delta 9), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (62/62), 7.05 MiB | 5.67 MiB/s, done.\n",
-            "Resolving deltas: 100% (18/18), done.\n"
+            "remote: Enumerating objects: 71, done.\u001b[K\n",
+            "remote: Counting objects: 100% (71/71), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (54/54), done.\u001b[K\n",
+            "remote: Total 71 (delta 24), reused 44 (delta 9), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (71/71), 7.05 MiB | 11.35 MiB/s, done.\n",
+            "Resolving deltas: 100% (24/24), done.\n",
+            "mv: cannot move '2025_assignment_1/data' to 'data/data': Directory not empty\n"
           ]
         }
       ],
@@ -72,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "1u1qR7iaq_GU"
       },
@@ -109,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "ws_5u7vRrg0o"
       },
@@ -119,23 +120,30 @@
         "  '''\n",
         "  Return a list of characters, representing the shared vocabulary of all languages\n",
         "  '''\n",
-        "  vocab = []\n",
-        "  ########################################\n",
-        "  # TODO: your code\n",
+        "  data_dir = \"./data\"\n",
+        "  vocab: set[str] = set()\n",
         "\n",
-        "  ########################################\n",
-        "  return vocab"
+        "  for fname in os.listdir(data_dir):\n",
+        "      if not fname.endswith(\".csv\"):\n",
+        "          continue  # skip JSON or other files\n",
+        "\n",
+        "      csv_path = os.path.join(data_dir, fname)\n",
+        "      df = pd.read_csv(csv_path, usecols=[\"tweet_text\"], encoding=\"utf-8\")\n",
+        "      for tweet in df[\"tweet_text\"].dropna():\n",
+        "          vocab.update(tweet)   # set.update() adds all characters at once\n",
+        "  vocab.update([\"<start>\", \"<end>\"])\n",
+        "  return list(vocab)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-1jcvg0jtMjF",
-        "outputId": "b05d8228-f84f-40fc-be2f-9be57ff3ead9"
+        "outputId": "265231bf-d184-4fa2-f7fa-0069a3bcaf90"
       },
       "outputs": [
         {
@@ -143,7 +151,7 @@
           "name": "stdout",
           "text": [
             "vocab length: 1804\n",
-            "Some characters in the vocab: ['국', 'о', '💞', '🔊', '►', 'w', 'ぜ', '¿', '🦃', 'ｌ']\n"
+            "Some characters in the vocab: ['🙇', '機', '👇', '몬', '༼', '탄', '👠', '🌄', '🈶', '🎩']\n"
           ]
         }
       ],
@@ -173,7 +181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "uySEXdEUrkq_"
       },
@@ -187,30 +195,85 @@
         "  :param smoothed: boolean indicating whether to apply smoothing\n",
         "  :return: a dictionary where the keys are n_grams and the values are dictionaries\n",
         "  '''\n",
-        "  LM = {}\n",
-        "  ########################################\n",
-        "  # your code\n",
+        "  def load_tweets():\n",
+        "    # Load all tweets for the requested language\n",
+        "    csv_path  = f\"./data/{lang}.csv\"\n",
+        "    tweets = []\n",
+        "    if os.path.exists(csv_path):\n",
+        "        df = pd.read_csv(csv_path, encoding=\"utf-8\")\n",
+        "        col = \"tweet_text\" if \"tweet_text\" in df.columns else \"text\"\n",
+        "        tweets = df[col].dropna().tolist()\n",
+        "    else:\n",
+        "        raise FileNotFoundError(f\"No data found for language '{lang}'\")\n",
+        "    return tweets\n",
         "\n",
-        "  ########################################\n",
+        "  def n_gram_counts(tweets):\n",
+        "    # Collect n‑gram counts:  context -> {next_token : count}\n",
+        "    counts: dict[str, dict[str, int]] = {}\n",
+        "\n",
+        "    for tweet in tweets:\n",
+        "        tokens = [\"<start>\"] * (n - 1) + list(tweet) + [\"<end>\"]\n",
+        "        for i in range(len(tokens) - n + 1):\n",
+        "            context = \"\".join(tokens[i : i + n - 1])\n",
+        "            nxt     = tokens[i + n - 1]\n",
+        "\n",
+        "            inner = counts.setdefault(context, {})\n",
+        "            inner[nxt] = inner.get(nxt, 0) + 1\n",
+        "    return counts\n",
+        "\n",
+        "  def convert_counts_to_prob(counts):\n",
+        "    # Convert counts to probabilities  (with / without smoothing)\n",
+        "    LM: dict[str, dict[str, float]] = {}\n",
+        "\n",
+        "    for context, nxt_counts in counts.items():\n",
+        "        total = sum(nxt_counts.values())\n",
+        "        if not smoothed:\n",
+        "            LM[context] = {\n",
+        "                tok: c / total\n",
+        "                for tok, c in nxt_counts.items()\n",
+        "            }\n",
+        "            continue\n",
+        "        # Base Laplace probabilities for every *known* token\n",
+        "        denom = total + V                       # add‑one: +|V|\n",
+        "        base_probs = {\n",
+        "            tok: (nxt_counts.get(tok, 0) + 1) / denom\n",
+        "            for tok in pred_vocab\n",
+        "        }\n",
+        "\n",
+        "        # Reserve 1/|V| probability mass for <unk>; scale the rest accordingly\n",
+        "        p_unk  = 1.0 / V\n",
+        "        scale  = 1.0 - p_unk\n",
+        "        LM[context] = {tok: p * scale for tok, p in base_probs.items()}\n",
+        "        LM[context][\"<unk>\"] = p_unk            # add the unknown token\n",
+        "    return LM\n",
+        "\n",
+        "  vocab = preprocess()\n",
+        "  pred_vocab = [tok for tok in vocab if tok != \"<start>\"]\n",
+        "  V = len(pred_vocab)                  # |V|  (without <unk>)\n",
+        "\n",
+        "  tweets = load_tweets()\n",
+        "  counts = n_gram_counts(tweets)\n",
+        "  LM = convert_counts_to_prob(counts)\n",
+        "\n",
         "  return LM"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d9mqbEhBttmm",
-        "outputId": "df92d141-999d-42c9-8c12-e6d5e51f7d81"
+        "outputId": "bab4c1c0-8f26-4c33-ac90-e9b3b88c0644"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "English Language Model with 3-gram is of length: 8239\n"
+            "English Language Model with 3-gram is of length: 8238\n"
           ]
         }
       ],
@@ -233,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "y9w8u411uJeq"
       },
@@ -247,17 +310,44 @@
         "  :param n: The n-gram of the model\n",
         "  :return: The perplexity\n",
         "  '''\n",
-        "  pp = 0\n",
-        "  #######################################\n",
-        "  # your code\n",
+        "  # padding\n",
+        "  tokens = [\"<start>\"] * (n - 1) + text + [\"<end>\"]\n",
         "\n",
-        "  ########################################\n",
-        "  return pp"
+        "  # vocabulary size (|V|) — ignore the <unk> entry if present\n",
+        "  sample_ctx = next(iter(model.values()))\n",
+        "  V = len([t for t in sample_ctx if t != \"<unk>\"])\n",
+        "\n",
+        "  # uniform back‑off prob if we cannot find <unk>\n",
+        "  uniform_p = 1.0 / max(V, 1)\n",
+        "\n",
+        "  log_prob_sum = 0.0\n",
+        "  steps = 0\n",
+        "\n",
+        "  # slide an n‑length window\n",
+        "  for i in range(n - 1, len(tokens)):\n",
+        "      context = \"\".join(tokens[i - n + 1 : i])  # n‑1 chars\n",
+        "      nxt     = tokens[i]\n",
+        "\n",
+        "      # retrieve probability\n",
+        "\n",
+        "      if context in model:\n",
+        "          prob = model[context].get(nxt,\n",
+        "                      model[context].get(\"<unk>\", uniform_p))\n",
+        "      else:\n",
+        "          prob = uniform_p\n",
+        "\n",
+        "      prob = max(prob, 1e-12)\n",
+        "\n",
+        "      log_prob_sum += np.log(prob)\n",
+        "      steps += 1\n",
+        "\n",
+        "  # average log‑probability to perplexity\n",
+        "  return np.exp(-log_prob_sum / steps)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "ef-EglxXrmk2"
       },
@@ -272,12 +362,30 @@
         "  :param n: The n-gram of the model\n",
         "  :return: the perplexity value\n",
         "  '''\n",
-        "  pp = 0\n",
-        "  ########################################\n",
-        "  # your code\n",
+        "  csv_path  = f\"./data/{target_lang}.csv\"\n",
         "\n",
-        "  ########################################\n",
-        "  return pp\n"
+        "  if os.path.exists(csv_path):\n",
+        "      df  = pd.read_csv(csv_path, encoding=\"utf-8\")\n",
+        "      col = \"tweet_text\" if \"tweet_text\" in df.columns else \"text\"\n",
+        "      tweets = df[col].dropna().tolist()\n",
+        "  else:\n",
+        "      raise FileNotFoundError(f\"No data for language '{target_lang}'\")\n",
+        "\n",
+        "  # accumulate log‑probability via the helper\n",
+        "  log_prob_sum = 0.0\n",
+        "  token_count  = 0\n",
+        "\n",
+        "  for tweet in tweets:\n",
+        "      char_list = list(tweet)                # no padding here\n",
+        "      sent_pp   = perplexity(model, char_list, n)\n",
+        "\n",
+        "      # perplexity definition:  PP = exp(‑logP / L)  ⇒  logP = ‑L·log(PP)\n",
+        "      L = len(char_list) + 1                 # +1 for <end> (padding handled inside)\n",
+        "      log_prob_sum -= L * np.log(sent_pp)\n",
+        "      token_count  += L\n",
+        "\n",
+        "  # corpus perplexity\n",
+        "  return float(np.exp(-log_prob_sum / token_count))"
       ]
     },
     {
@@ -288,18 +396,18 @@
       "metadata": {
         "id": "AIdDFvinBVhx"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1WUouhkBuWJu",
-        "outputId": "75967c86-5b00-480a-8ffd-574122f7a452"
+        "outputId": "0b6278c0-0bd0-4cc6-b6d6-684c20bd4ee1"
       },
       "outputs": [
         {
@@ -307,10 +415,10 @@
           "name": "stdout",
           "text": [
             "Perplexity of the English 3-gram model on datasets:\n",
-            "On English:  26.74\n",
-            "On French:  133.75\n",
-            "On Dutch:  145.51\n",
-            "On Tagalog:  147.46\n"
+            "On English:  26.75\n",
+            "On French:  58.50\n",
+            "On Dutch:  61.42\n",
+            "On Tagalog:  70.61\n"
           ]
         }
       ],
@@ -341,19 +449,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5XP3ZIpLqB6r",
-        "outputId": "3378ada3-42c1-42fb-88eb-8eeec458d0cd"
+        "outputId": "0deb5873-5d0c-4c9f-f7d7-49c0a2655713"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Perplexity on differnet n-gram models on English\n",
-            "On 1-gram:  38.63\n",
-            "On 2-gram:  21.30\n",
-            "On 3-gram:  26.74\n",
-            "On 4-gram:  59.87\n"
+            "On 1-gram:  37.88\n",
+            "On 2-gram:  21.31\n",
+            "On 3-gram:  26.75\n",
+            "On 4-gram:  59.88\n"
           ]
         }
       ]
@@ -370,7 +478,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "tMczigsHuadi"
       },
@@ -381,7 +489,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "16ew9aZWroPC"
       },
@@ -394,12 +502,21 @@
         "  of the source language on the text of the target language.\n",
         "  :return: a DataFrame containing the perplexity values\n",
         "  '''\n",
-        "  df  = pd.DataFrame()\n",
-        "  ########################################\n",
-        "  # your code\n",
+        "  rows = []\n",
+        "  for src in languages:\n",
+        "      for n in range(1, 5):\n",
+        "          lm = build_lm(src, n, smoothed=True)\n",
         "\n",
-        "  ########################################\n",
-        "  return df\n"
+        "          for tgt in languages:\n",
+        "              pp = eval(lm, tgt, n)\n",
+        "              rows.append({\n",
+        "                  \"source\": src,\n",
+        "                  \"target\": tgt,\n",
+        "                  \"n\":           n,\n",
+        "                  \"perplexity\":  pp\n",
+        "              })\n",
+        "\n",
+        "  return pd.DataFrame(rows)"
       ]
     },
     {
@@ -416,7 +533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "CpCm24-RrpuA"
       },
@@ -431,12 +548,26 @@
         "  :param number_of_tokens: the number of tokens to generate\n",
         "  :param r: the random seed to use\n",
         "  '''\n",
-        "  text = \"\"\n",
-        "  ########################################\n",
-        "  # your code\n",
+        "  np.random.seed(r)\n",
+        "  lm = build_lm(lang, n, smoothed=False)            # unsmoothed LM\n",
         "\n",
-        "  ########################################\n",
-        "  return text"
+        "  text = list(prompt)                               # mutable buffer\n",
+        "  start_ctx = \"<start>\" * (n - 1)                   # fallback context\n",
+        "  vocab = np.array(sorted({t for d in lm.values() for t in d}))  # for uniform fallback\n",
+        "\n",
+        "  for _ in range(number_of_tokens):\n",
+        "      ctx = \"\".join(text[-(n - 1):]) if n > 1 else \"\"            # last n‑1 chars\n",
+        "      dist = lm.get(ctx) or lm.get(start_ctx)                    # back‑off\n",
+        "      if dist:                                                   # normal case\n",
+        "          tokens, probs = zip(*dist.items())\n",
+        "          token = np.random.choice(tokens, p=probs)\n",
+        "      else:                                                      # unseen everywhere → uniform\n",
+        "          token = np.random.choice(vocab)\n",
+        "\n",
+        "      if token == \"<end>\": break\n",
+        "      text.append(token)\n",
+        "\n",
+        "  return \"\".join(text)"
       ]
     },
     {
@@ -451,27 +582,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0ykbMBzG9LWn",
-        "outputId": "c9613bb9-9d55-48dd-d2bf-f79435ab6d84"
+        "outputId": "00c92347-2db0-4763-d198-f5015bf31fe0"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "I amml.lIntcdoN\n",
-            "I ammell1Gige o\n",
-            "I amamebompirs a\n",
-            "I am am surrance t\n",
-            "Soyy ' Dusos q\n",
-            "Soyoy ensanta o\n",
-            "Je suiss jeitpu s \n",
-            "Je suisistreil Her \n"
+            "I amD.lIntudyE\n",
+            "I amell1Gige o\n",
+            "I amebompirs a\n",
+            "I am surrance t\n",
+            "Soy ' Dusos q\n",
+            "Soy ensanta o\n",
+            "Je suis jeitpu s \n",
+            "Je suistreil Her \n"
           ]
         }
       ],
@@ -506,14 +637,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "JZTlc2ieruqq",
-        "outputId": "772800de-c13a-4bd2-f22e-734b012da84f"
+        "outputId": "01e23474-698a-4e51-b83b-66324e1d5e84"
       },
       "outputs": [
         {
@@ -575,7 +706,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_32c122dc-39da-4c0e-95d8-8e3c0930cbaf\", \"results.json\", 903)"
+              "download(\"download_74dcaf52-941f-4c2a-a630-abdf85612afe\", \"results.json\", 877)"
             ]
           },
           "metadata": {}
@@ -650,24 +781,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0dEpidyrqXTr",
-        "outputId": "771c371b-d07c-4aee-fd4e-8bca0a9d31f3"
+        "id": "0dEpidyrqXTr"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "total 12\n",
-            "drwxr-xr-x 2 root root 4096 Mar 27 16:54 data\n",
-            "-rw-r--r-- 1 root root  903 Mar 27 17:05 results.json\n",
-            "drwxr-xr-x 1 root root 4096 Mar 24 13:34 sample_data\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Show the local files, results.json should be there now and\n",
         "# also downloaded to your local machine\n",
